--- a/appspec.yml
+++ b/appspec.yml
@@ -1,23 +1,5 @@
 version: 0.0
 os: linux
 files:
-   - source: /
+   - source: /spring-boot-web-0.0.1-SNAPSHOT.jar
      destination: /home/ec2-user/maven
-permissions:
-   - object: /var/www/html
-     pattern: "**"
-     owner: apache
-     group: apache
-     mode: 755
-     type:
-       - file
-hooks:
-   BeforeInstall:
-    - location: scripts/installapache.sh
-      runas: root
-    - location: scripts/startapache.sh
-      runas: root
-   AfterInstall:
-    - location: scripts/restartapache.sh
-      runas: root
-
