--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,5 @@
 version: 0.0
 os: linux
 files:
-   - source: /spring-boot-web-0.0.1-SNAPSHOT.jar
-     destination: /home/ec2-user/maven
+   - source: /
+     destination: /var/www/html
